--- a/config-examples/textfile.config
+++ b/config-examples/textfile.config
@@ -28,7 +28,7 @@ player=mpg123 -@ - -l 1 -g 60
 enabled=1
 stype=content
 standalone=1
-name=Craig
+name=Anthony
 
 [birthday]
 enabled=0
@@ -50,25 +50,6 @@ host=query.yahooapis.com
 path=/v1/public/yql?q=select%%20*%%20from%%20weather.forecast%%20where%%20woeid%%3D
 pathtail=&format=json
 
-[btc]
-enabled=0
-stype=content
-host=coinbase.com
-path=/api/v1/prices/buy
-
-[stocks]
-enabled=0
-stype=content
-tickers=fb,pot.nz
-host=query.yahooapis.com
-path=/v1/public/yql?q=select%%20*%%20from%%20yahoo.finance.quote%%20where%%20symbol%%20in%%20(%%27
-pathtail=%%27)%%20&format=json&env=store://datatables.org/alltableswithkeys
-
-[news]
-enabled=0
-stype=content
-host=feeds.bbci.co.uk
-path=/news/world/rss.xml
 
 [goodmorning]
 handler=textfile
